<resources>
    <string name="app_name">Automated attendance monitoring</string>
    <string name="gather_attendance">Gather attendance</string>
    <string name="stop_gathering_attendance">Stop gathering attendance</string>
    <string name="mark_me">Mark me</string>
    <string name="fullname_input_hint">Input full name</string>
    <string name="table_header_fullname">Full name</string>
    <string name="table_header_participation">Points</string>
    <string name="bluetooth_enabling_warning">Bluetooth will be automatically enabled</string>
    <string name="gathering_attendance_failed_title">Gathering attendance failed</string>
    <string name="gathering_attendance_failed_message">The app was not able to start Bluetooth LE scan.
        Check app permissions and try again</string>
    <string name="marking_failed_title">Marking attendance failed</string>
    <string name="marking_failed_message">The app was not able to start Bluetooth LE advertisement.
        Check app permissions and try again</string>
    <string name="trying_to_start_marking">Trying to start marking</string>
    <string name="marking_started">Sending data to teacher</string>
    <string name="add_student_button_text">Add student</string>
    <string name="no_bluetooth_title">Bluetooth not supported</string>
    <string name="no_bluetooth_message">Your device has no bluetooth support,
        so the app is not supported. Sorry :(</string>
    <string name="sign_in_button_text">Sign in via Google</string>
    <string name="user_type_student">Student</string>
    <string name="user_type_teacher">Teacher</string>
    <string name="login_error">Could not log in with you Google account. Check permissions and try again.</string>
    <string name="add_student_error">Student \"%s\" was connected, but not added due to connection error.</string>
    <string name="remove_student_error">Student was not deleted due to connection error.</string>
    <string name="update_points_error">Student\'s points was not updated due to connection error.</string>
    <string name="set_lesson_data_button_text">OK</string>
    <string-array name="lesson_subjects">
        <item>Subject not chosen</item>
        <item>SWP</item>
        <item>Networks</item>
        <item>Sport</item>
    </string-array>
    <string-array name="lesson_types">
        <item>Type not chosen</item>
        <item>Lecture</item>
        <item>Tutorial</item>
        <item>Lab</item>
    </string-array>
</resources>
