<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherActivity">

    <Button
        android:id="@+id/gatherAttendanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="gatherAttendance"
        android:text="@string/gather_attendance"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothEnablingWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectSpinner" />

    <TableLayout
        android:id="@+id/attendanceTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:stretchColumns="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStudentManuallyFullnameInput">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/table_header_fullname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_span="3"
                android:text="@string/table_header_participation" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/bluetoothEnablingWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bluetooth_enabling_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gatherAttendanceButton" />

    <EditText
        android:id="@+id/addStudentManuallyFullnameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=".AUTOFILL_HINT_PERSON_NAME"
        android:ems="10"
        android:hint="@string/fullname_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/attendanceTable"
        app:layout_constraintEnd_toStartOf="@+id/addStudentManuallyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothEnablingWarning" />

    <Button
        android:id="@+id/addStudentManuallyButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:enabled="false"
        android:onClick="addStudentManually"
        android:text="@string/add_student_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/addStudentManuallyFullnameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addStudentManuallyFullnameInput"
        app:layout_constraintTop_toTopOf="@+id/addStudentManuallyFullnameInput"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/subjectSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/gatherAttendanceButton"
        app:layout_constraintEnd_toStartOf="@+id/typeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="150dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/subjectSpinner"
        app:layout_constraintEnd_toStartOf="@+id/setLessonDataButton"
        app:layout_constraintStart_toEndOf="@+id/subjectSpinner"
        app:layout_constraintTop_toTopOf="@+id/subjectSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/setLessonDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="setLessonData"
        android:text="@string/set_lesson_data_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/typeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/typeSpinner"
        app:layout_constraintTop_toTopOf="@+id/typeSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>