<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/user_type_teacher"
        app:layout_constraintBottom_toBottomOf="@+id/userTypeSwitch"
        app:layout_constraintStart_toEndOf="@+id/userTypeSwitch"
        app:layout_constraintTop_toTopOf="@+id/userTypeSwitch" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="trySignIn"
        android:text="@string/sign_in_button_text"
        app:layout_constraintEnd_toEndOf="@+id/userTypeSwitch"
        app:layout_constraintStart_toStartOf="@+id/userTypeSwitch"
        app:layout_constraintTop_toBottomOf="@+id/userTypeSwitch" />

    <Switch
        android:id="@+id/userTypeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/user_type_student"
        app:layout_constraintBottom_toBottomOf="@+id/userTypeSwitch"
        app:layout_constraintEnd_toStartOf="@+id/userTypeSwitch"
        app:layout_constraintTop_toTopOf="@+id/userTypeSwitch" />
</androidx.constraintlayout.widget.ConstraintLayout>